--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,26 @@
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: 'poppins', sans-serif; }
 
+body {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  min-height: 100vh;
+  background: #000d0f; }
+
+.container {
+  position: relative;
+  width: 80px;
+  height: 50px;
+  border-radius: 40px;
+  border: 2px solid rgba(255, 255, 255, 0.2);
+  transition: .5s; }
+
+.container:hover {
+  width: 120px;
+  border: 2px solid white; }
 
 /*# sourceMappingURL=style.css.map */
